# Stepik

./: .gitignore  CMakeLists.txt  README.md
include/: header.h  m_array.h  m_string.h
src/: m_array.cpp  m_string.cpp  main.cpp  source.cpp
